# patchable

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: build.yaml  ci.yaml  lint.yaml  test.yaml
patchable/: Cargo.toml
patchable-macro/: Cargo.toml
patchable-macro/src/: context.rs  lib.rs
patchable-macro/src/context/: from_impl.rs  patch_impl.rs  patch_struct.rs  patchable_impl.rs  utils.rs
patchable/examples/: user_profile.rs
patchable/src/: lib.rs
patchable/tests/: basic.rs  impl_from.rs  macro_expansion_failures.rs  no_serde.rs  postcard.rs  repro_generic.rs  serde.rs  serde_json.rs
patchable/tests/common/: mod.rs
patchable/tests/ui/: derive_fail_borrowed_fields.rs  derive_fail_borrowed_fields.stderr  derive_fail_non_struct.rs  derive_fail_patchable_field_not_simple_generic.rs  derive_fail_patchable_field_not_simple_generic.stderr  derive_fail_patchable_name_value_parameter.rs  derive_fail_patchable_name_value_parameter.stderr  derive_fail_patchable_skip_with_unknown_parameter.rs  derive_fail_patchable_skip_with_unknown_parameter.stderr  derive_fail_patchable_unknown_parameter.rs  derive_fail_patchable_unknown_parameter.stderr
