[package]
name = "patchable-macro"
description = "Derive macros for traits Patchable and Patch in the patchable crate"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
proc-macro-crate.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["visit"] }
