[package]
name = "patchable-macro"
description = "Macro suite for the patchable crate: enables model with #[patchable_model] and automatic trait derives for Patchable and Patch."
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
rust-version.workspace = true
keywords.workspace = true
documentation.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[features]
serde = []
impl_from = []

[dependencies]
proc-macro2.workspace = true
proc-macro-crate.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["full", "visit", "extra-traits"] }
