[package]
name = "patchable"
description.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
documentation.workspace = true
readme.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
patchable-macro = { version = "0.5.0", path = "../patchable-macro" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true

[dev-dependencies]
thiserror.workspace = true
